fix navigation bar (header) to wrap when page has very low width

--- a/apps/home/static/css/home-styles.css
+++ b/apps/home/static/css/home-styles.css
@@ -136,8 +136,8 @@ height: auto;
     }
 }
 
-.me-pic::after{
-filter: blur(10px);
+.polygon-for-pic::after{
+filter: blur(30px);
 }
 
 .git-logo {
